2003-09-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Bump version number.

	* src/Makefile.am:
	Dist the marshal list.

	* tests/Makefile.am:
	Fix the mb-test compile

	* test/mb-test.c:
	Break the test so it compiles. Will fix soonish, honest.
	
2003-09-16  Ross Burton  <ross@burtonini.com>

	* NEWS:
	* TODO:
	Updates for upcoming 0.5.3.

	* src/sj-metadata-marshal.list:
	* src/Makefile.am:
	Define some custom marshals.

	* src/sj-metadata.[ch]:
	* src/sj-metadata-musicbrainz.c:
	* src/sj-main.c:
	Return the metadata in a signal, so that threaded lookups can be
	made. Patience young padwan.

2003-09-10  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Add g_strdup()s to avoid segfaults when editing track
	listings. Thanks to Mike Hearn.

2003-09-04  Bastien Nocera  <hadess@hadess.net>

	* data/sound-juicer.schemas.in:
	* src/sj-extracting.c: (filepath_parse_pattern): added %aA, %aT,
	%tT and %tA, the lowercase equivalents of %aa, %at, %tt and %ta
	so one can lowercase all his filenames and directory entries when
	ripping

2003-09-03  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c:
	Handle unknown disk types as audio.

2003-09-03  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c: Support FreeBSD CD-ROM ejecting (patch from Koop
	Mast <einekoai@chello.nl).

2003-09-03  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c: (reread_cd):
	Clear the UI and don't do any lookup if the CD isn't an audio CD
	* src/sj-util.[ch]:
	Added is_audio_cd

2003-09-03  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in: 
	Added Bugzilla information.

2003-09-02  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c: (error_on_start), (reread_cd),
	(device_changed_cb): exit when no CD drives could be found, don't
	g_strdup_printf when gtk_message_dialog_new handles printf format
	just fine (fixes memleaks) (both patches from Jonathan Blandford
	<jrb@redhat.com>)

2003-09-02  Thomas Vander Stichele <thomas at apestaart dot org>
