@@ -1,3 +1,8 @@
+2003-09-16  Bastien Nocera  <hadess@hadess.net>
+
+	* tests/mb-test.c: (metadata_cb), (main):
+	Fix the test so that it works and compiles.
+
 2003-09-16  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
